[package]
name = "xlog"
version = "0.1.0"
edition = "2024"

[lib]
name = "xlog"
path = "src/lib.rs"

[[bin]]
name = "xlog-cli"
path = "src/bin/cli.rs"

[build-dependencies]
lalrpop = "*"

[dependencies]
lalrpop-util = { version = "*", features = ["lexer", "unicode"] }
string-interner = "*"

ds = { path = "../ds" }
